updating our Introduction, Where I'm from, Hobbies, dream job, Where do you live and Why be a web developer with personal information

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am Server Adm Graduate from Columbia University in Puerto Rico.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Caguas, Puerto Rico.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My Hobbies are be with my family and play videos games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job are working for a important software company in US.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live right now in New Britain, Connecticut.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Become a web developer is my next step in my career.</p>
     </section>
 
     <footer id="footer">
